[tool.poetry]
name = "cloud-run"
version = "0.1.0"
description = ""
authors = ["alex <alex@pdp7.net>"]

[tool.poetry.dependencies]
python = "^3.9"
appdirs = "^1.4.4"
PyYAML = "^6.0"
pyzstd = {version = "^0.16.1", optional = true }

[tool.poetry.extras]
zstd = ["pyzstd"]

[tool.poetry.dev-dependencies]
ipython = "*"
ipdb = "*"
black = "*"
flake8 = "*"
flake8-black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cloud-run = 'cloud_run.cli:main'
